--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "jest": {
     "testEnvironment": "node"
   },
+  "engines": {
+    "node": "8.11.3",
+    "yarn": "1.5.1"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -24,7 +28,9 @@
     "test-unit": "jest tests-unit",
     "test-integration": "jest tests-integration",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "bimage": "docker-compose build",
+    "pimage": "docker push pstas/wallet-scanner:latest"
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
